--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,7 @@
 export(est_con_survival)
 export(est_cure_L)
 export(plot_con_surv)
+export(runDynPred)
 import(R.utils)
 import(cubature)
 import(doSNOW)
@@ -10,5 +11,6 @@ import(dplyr)
 import(foreach)
 import(jmfhc)
 import(parallel)
+import(shiny)
 import(survival)
 import(tdROC)
