--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -19,7 +19,7 @@ Description: The package predicts individual conditional cure rates and conditio
 License: GPL (>= 3)
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
-RoxygenNote: 7.2.0
+RoxygenNote: 7.3.1
 LazyData: true
 Depends: 
    R (>= 4.1.0)
@@ -27,10 +27,12 @@ Imports:
     doSNOW,
     cubature,
     dplyr,
+    fhc,
     foreach,
     jmfhc,
     parallel,
-    R.utils,
-    tdROC
+    R.utils
 Remotes:
-    github::cxie1/jmfhc
+    github::cxie19/fhc,
+    github::cxie19/jmfhc
+    
